c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_lex/unescaped_double_quote.c
int main(void)
{
    char *ptr = "foo"bar";
        return 0;
}